# _angine

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt  angine.c  batch.h  color.c  font.c  font.h  glfw.h  image.c  mesh.c  mesh.h  polygon_batch.c  polygon_batch.h  scene.h  shader.c  shader.h  shader_sources.c  shader_sources.h  texture.c  texture.h  texture_batch.c  texture_batch.h  utils.c  utils.h  window.c  window.h
core/include/core/: angine.h  color.h  font.h  image.h  key.h  polygon_batch.h  scene.h  texture.h  texture_batch.h
examples/: CMakeLists.txt
examples/playground/: CMakeLists.txt  main.c
examples/snake/: CMakeLists.txt  main.c
glad/: CMakeLists.txt  glad.c
glad/include/glad/: glad.h
graphics/: CMakeLists.txt  graphics.c
graphics/include/graphics/: graphics.h
io/: CMakeLists.txt  buffer.c  file.c
io/include/io/: buffer.h  file.h
maths/: CMakeLists.txt  matrix.c  utils.c  vec.c
maths/include/maths/: matrix.h  utils.h  vec.h
utils/: CMakeLists.txt
utils/include/collection/: hash_table.h
utils/include/utils/: log.h  stb_image.h  types.h
