cmake_minimum_required(VERSION 3.15)
project(Angine C)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

add_subdirectory(freetype2)
add_subdirectory(glfw)
add_subdirectory(utils)
add_subdirectory(maths)
add_subdirectory(io)
add_subdirectory(glad)
add_subdirectory(graphics)
add_subdirectory(core)
add_subdirectory(examples)
